Fix workout update bug and implement proper exercise loading